# llama-stack-provider-trl-remote

./: .gitignore  README.md  REMOTE_PROVIDER_SETUP.md  build.yaml  config.py  how_to_run.md  post_training.py  pyproject.toml  run.yaml  run_remote.yaml  simple-trl-run.yaml  test_dpo_model.py  trl-run.yaml
examples/: examples.ipynb  experiment.ipynb
how_to_use/: api.md  how_to_use.ipynb
llama_stack_provider_trl/: __init__.py  config.py  post_training.py
llama_stack_provider_trl/recipes/: dpo_training_single_device.py
llama_stack_provider_trl_remote/: __init__.py  adapter.py  config.py  dpo_training_single_device.py  http_server.py  provider_data_validator.py  pyproject.toml  service.py  training_worker.py
llama_stack_provider_trl_remote/dpo_checkpoints/dpo_model/: config.json  generation_config.json  model.safetensors.index.json  tokenizer_config.json
llama_stack_provider_trl_remote/recipes/: __init__.py  dpo_training_multicard.py  dpo_training_unified.py
llama_stack_provider_trl_remote/scripts/: start_service.py
providers.d/inline/post_training/: trl.yaml
providers.d/remote/post_training/: trl.yaml  trl_remote.yaml
recipes/: dpo_training_single_device.py
scripts/: build.sh  prepare-env.sh  run-direct.sh  run.sh  setup-remote.sh  start-llama-stack.sh  start-trl-server.sh
