[project]
dependencies = [
    "llama-stack>=0.2.3",
    "trl==0.18.1",
    "transformers==4.52.4", 
    "aiohttp",
    "fastapi",
    "uvicorn",
    "pydantic",
]

name = "llama-stack-provider-trl-remote"
version = "0.1.0"
description = "Remote TRL Provider for Llama Stack DPO Training"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack_provider_trl_remote*"] 